--- a/WT/wesley-tansey/src/App.css
+++ b/WT/wesley-tansey/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto:100&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body {
    font-family: 'Roboto', sans-serif;
-   color: black;
+   color: #2b3b33;
    height: 100%;
    position: relative;
 }
@@ -33,6 +33,7 @@ nav {
   margin: 0 25px 0 0;
 }
 
+
 nav a {
   text-decoration: none;
   color: #2b3b33;
@@ -44,6 +45,7 @@ nav a {
 nav a:hover {
   color: #367041;
 }
+
 
 .component {
   width: 100%;
